--- a/Assignments/module-3/style.css
+++ b/Assignments/module-3/style.css
@@ -6,7 +6,7 @@
 
 .navbar{
 	border-radius: 0px;
-	background-color: rgba(0,0,0,0.8);
+	background-color: rgba(6, 76, 78, 0.8);
 }
 
 .navbar-brand{
@@ -59,7 +59,7 @@ li{
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	background-color: white;
+	background-color: rgb(228, 55, 176);
 	border-bottom: 1px solid black;
 	color: black;
 	display: block;
